--- a/cmd/verification-door/k8s/02-ingress.yaml
+++ b/cmd/verification-door/k8s/02-ingress.yaml
@@ -1,20 +1,20 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: service-example-npool-top-ingress
+  name: verification-door-npool-top-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: service-example
-    k8s.kuboard.cn/workload: service-example
+    k8s.kuboard.cn/displayName: verification-door
+    k8s.kuboard.cn/workload: verification-door
     kubernetes.io/ingress.class: "traefik-internet"
 spec:
   rules:
   - host: api.npool.top
     http:
       paths:
-      - path: /service-example
+      - path: /verification-door
         backend:
-          serviceName: service-example
+          serviceName: verification-door
           servicePort: http
 
 ---
@@ -22,18 +22,18 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: service-example-xpool-top-ingress
+  name: verification-door-xpool-top-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: service-example
-    k8s.kuboard.cn/workload: service-example
+    k8s.kuboard.cn/displayName: verification-door
+    k8s.kuboard.cn/workload: verification-door
     kubernetes.io/ingress.class: "traefik-internet"
 spec:
   rules:
   - host: api.xpool.top
     http:
       paths:
-      - path: /service-example
+      - path: /verification-door
         backend:
-          serviceName: service-example
+          serviceName: verification-door
           servicePort: http
