--- a/cmd/verification-door/VerificationDoor.viper.yaml
+++ b/cmd/verification-door/VerificationDoor.viper.yaml
@@ -3,7 +3,7 @@ config:
   hostname: "verification-door.npool.top"
   http_port: 50090
   grpc_port: 50091
-  healthz_port: 50092
+  prometheus_port: 50092
   appid: "89089012783789789719823798127398"
   logdir: "./"
   apolloAccessKey: "0147fb70b815403790e8634b899fac07"
