update k8s yaml and add port

--- a/cmd/verification-door/k8s/01-verification-door.yaml
+++ b/cmd/verification-door/k8s/01-verification-door.yaml
@@ -48,5 +48,10 @@ spec:
   ports:
   - name: api
     port: 50090
+    targetPort: 50090
+  - name: grpc
     port: 50091
+    targetPort: 50091
+  - name: prometheus
     port: 50092
+    targetPort: 50092
