add api register in k8s yaml

--- a/cmd/verification-door/k8s/02-ingress.yaml
+++ b/cmd/verification-door/k8s/02-ingress.yaml
@@ -1,39 +1,57 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: verification-door-npool-top-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: verification-door
-    k8s.kuboard.cn/workload: verification-door
+    k8s.kuboard.cn/displayName: verification-door-npool
+    k8s.kuboard.cn/workload: verification-door-npool
     kubernetes.io/ingress.class: "traefik-internet"
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd
+
 spec:
   rules:
-  - host: api.npool.top
-    http:
-      paths:
-      - path: /verification-door
-        backend:
-          serviceName: verification-door
-          servicePort: http
+    - host: api.npool.top
+      http:
+        paths:
+          - path: /verification-door
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
 
 ---
 
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: verification-door-xpool-top-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: verification-door
-    k8s.kuboard.cn/workload: verification-door
+    k8s.kuboard.cn/displayName: verification-door-xpool
+    k8s.kuboard.cn/workload: verification-door-xpool
     kubernetes.io/ingress.class: "traefik-internet"
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd
+
 spec:
   rules:
-  - host: api.xpool.top
-    http:
-      paths:
-      - path: /verification-door
-        backend:
-          serviceName: verification-door
-          servicePort: http
+    - host: api.xpool.top
+      http:
+        paths:
+          - path: /verification-door
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
+
+---
+
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: strip-verification-door-prefix
+  namespace: kube-system
+spec:
+  stripPrefix:
+    prefixes:
+      - /verification-door
