add google recaptcha

--- a/cmd/verification-door/k8s/02-ingress.yaml
+++ b/cmd/verification-door/k8s/02-ingress.yaml
@@ -1,7 +1,67 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: verification-door-npool-top-ingress
+  name: verification-door-appid-userid-ingress
+  namespace: kube-system
+  annotations:
+    k8s.kuboard.cn/displayName: verification-door-appid-userid
+    k8s.kuboard.cn/workload: verification-door-appid-userid
+    kubernetes.io/ingress.class: "traefik-internet"
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd
+
+spec:
+  rules:
+    - host: api.npool.top
+      http: &http_appid_userid_rules
+        paths:
+          - path: /verification-door
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
+    - host: api.xpool.top
+      http: *http_appid_userid_rules
+
+---
+
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: verification-door-appid-ingress
+  namespace: kube-system
+  annotations:
+    k8s.kuboard.cn/displayName: verification-door-appid
+    k8s.kuboard.cn/workload: verification-door-appid
+    kubernetes.io/ingress.class: "traefik-internet"
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd
+
+spec:
+  rules:
+    - host: api.npool.top
+      http: &http_appid_rules
+        paths:
+          - path: /verification-door/v1/send/email
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
+          - path: /verification-door/v1/send/sms
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
+          - path: /verification-door/v1/verify/code
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
+    - host: api.xpool.top
+      http: *http_appid_rules
+
+---
+
+apiVersion: networking.k8s.io/v1beta1
+kind: Ingress
+metadata:
+  name: verification-door-ingress
   namespace: kube-system
   annotations:
     k8s.kuboard.cn/displayName: verification-door-npool
@@ -13,36 +73,18 @@ metadata:
 spec:
   rules:
     - host: api.npool.top
-      http:
+      http: &http_rules
         paths:
-          - path: /verification-door
+          - path: /verification-door/version
             backend:
               serviceName: verification-door
               servicePort: 50090
-
----
-
-apiVersion: networking.k8s.io/v1beta1
-kind: Ingress
-metadata:
-  name: verification-door-xpool-top-ingress
-  namespace: kube-system
-  annotations:
-    k8s.kuboard.cn/displayName: verification-door-xpool
-    k8s.kuboard.cn/workload: verification-door-xpool
-    kubernetes.io/ingress.class: "traefik-internet"
-    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd
-
-spec:
-  rules:
+          - path: /verification-door/v1/verify/google/recaptcha
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
     - host: api.xpool.top
-      http:
-        paths:
-          - path: /verification-door
-            backend:
-              serviceName: verification-door
-              servicePort: 50090
+      http: *http_rules
 
 ---
 
