--- a/cmd/verification-door/k8s/02-ingress.yaml
+++ b/cmd/verification-door/k8s/02-ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     k8s.kuboard.cn/workload: verification-door-appid-userid
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
   rules:
@@ -20,6 +20,10 @@ spec:
               serviceName: verification-door
               servicePort: 50090
     - host: api.xpool.top
+      http: *http_appid_userid_rules
+    - host: www.npool.top
+      http: *http_appid_userid_rules
+    - host: www.xpool.top
       http: *http_appid_userid_rules
 
 ---
@@ -34,7 +38,7 @@ metadata:
     k8s.kuboard.cn/workload: verification-door-appid
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
   rules:
@@ -55,6 +59,10 @@ spec:
               servicePort: 50090
     - host: api.xpool.top
       http: *http_appid_rules
+    - host: www.npool.top
+      http: *http_appid_rules
+    - host: www.xpool.top
+      http: *http_appid_rules
 
 ---
 
@@ -68,7 +76,7 @@ metadata:
     k8s.kuboard.cn/workload: verification-door-npool
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
   rules:
@@ -84,6 +92,10 @@ spec:
               serviceName: verification-door
               servicePort: 50090
     - host: api.xpool.top
+      http: *http_rules
+    - host: www.npool.top
+      http: *http_rules
+    - host: www.xpool.top
       http: *http_rules
 
 ---
