udpate ingress name

--- a/cmd/verification-door/k8s/02-ingress.yaml
+++ b/cmd/verification-door/k8s/02-ingress.yaml
@@ -72,8 +72,8 @@ metadata:
   name: verification-door-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: verification-door-npool
-    k8s.kuboard.cn/workload: verification-door-npool
+    k8s.kuboard.cn/displayName: verification-door
+    k8s.kuboard.cn/workload: verification-door
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd
