--- a/cmd/verification-door/k8s/kustomization.yaml
+++ b/cmd/verification-door/k8s/kustomization.yaml
@@ -2,5 +2,6 @@ commonLabels:
   # app: verification-door
 
 resources:
-- 01-verification-door.yaml
-- 02-ingress.yaml
+  - 01-verification-door.yaml
+  - 02-traefik-ingress.yaml
+  - 03-nginx-ingress.yaml
