add new site name in ingress

--- a/cmd/verification-door/k8s/02-traefik-ingress.yaml
+++ b/cmd/verification-door/k8s/02-traefik-ingress.yaml
@@ -29,6 +29,8 @@ spec:
       http: *http_appid_userid_rules
     - host: www.xpool.top
       http: *http_appid_userid_rules
+    - host: www.procyon.vip
+      http: *http_appid_userid_rules
 
 ---
 apiVersion: networking.k8s.io/v1beta1
@@ -66,6 +68,8 @@ spec:
       http: *http_appid_rules
     - host: www.xpool.top
       http: *http_appid_rules
+    - host: www.procyon.vip
+      http: *http_appid_rules
 
 ---
 apiVersion: networking.k8s.io/v1beta1
@@ -98,6 +102,8 @@ spec:
     - host: www.npool.top
       http: *http_rules
     - host: www.xpool.top
+      http: *http_rules
+    - host: www.procyon.vip
       http: *http_rules
 
 ---
