add tls into ingress

--- a/cmd/verification-door/k8s/02-traefik-ingress.yaml
+++ b/cmd/verification-door/k8s/02-traefik-ingress.yaml
@@ -11,6 +11,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
+  tls:
+    - secretName: procyon-vip-tls
   rules:
     - host: api.npool.top
       http: &http_appid_userid_rules
@@ -46,6 +48,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
+  tls:
+    - secretName: procyon-vip-tls
   rules:
     - host: api.npool.top
       http: &http_appid_rules
@@ -85,6 +89,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd
 
 spec:
+  tls:
+    - secretName: procyon-vip-tls
   rules:
     - host: api.npool.top
       http: &http_rules
@@ -107,6 +113,7 @@ spec:
       http: *http_rules
 
 ---
+
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
