--- a/cmd/verification-door/k8s/02-traefik-ingress.yaml
+++ b/cmd/verification-door/k8s/02-traefik-ingress.yaml
@@ -33,6 +33,8 @@ spec:
       http: *http_appid_userid_rules
     - host: www.procyon.vip
       http: *http_appid_userid_rules
+    - host: procyon.vip
+      http: *http_appid_userid_rules
 
 ---
 apiVersion: networking.k8s.io/v1beta1
@@ -74,6 +76,8 @@ spec:
       http: *http_appid_rules
     - host: www.procyon.vip
       http: *http_appid_rules
+    - host: procyon.vip
+      http: *http_appid_rules
 
 ---
 apiVersion: networking.k8s.io/v1beta1
@@ -110,6 +114,8 @@ spec:
     - host: www.xpool.top
       http: *http_rules
     - host: www.procyon.vip
+      http: *http_rules
+    - host: procyon.vip
       http: *http_rules
 
 ---
