--- a/cmd/verification-door/VerificationDoor.viper.yaml
+++ b/cmd/verification-door/VerificationDoor.viper.yaml
@@ -5,5 +5,6 @@ config:
   grpc_port: 50091
   prometheus_port: 50092
   appid: "89089012783789789719823798127398"
+  serviceid: "c51a4757-fbf5-4751-8113-03c346128b4a"
   logdir: "./"
   apolloAccessKey: "0147fb70b815403790e8634b899fac07"
