--- a/cmd/verification-door/k8s/02-traefik-ingress.yaml
+++ b/cmd/verification-door/k8s/02-traefik-ingress.yaml
@@ -29,6 +29,10 @@ spec:
             backend:
               serviceName: verification-door
               servicePort: 50090
+          - path: /api/verification-door/v1/send/user/site/contact/email
+            backend:
+              serviceName: verification-door
+              servicePort: 50090
     - host: api.xpool.top
       http: *http_appid_userid_rules
     - host: www.npool.top
