--- a/cmd/verification-door/k8s/02-traefik-ingress.yaml
+++ b/cmd/verification-door/k8s/02-traefik-ingress.yaml
@@ -8,7 +8,10 @@ metadata:
     k8s.kuboard.cn/workload: verification-door-appid-userid
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-headers-appid-to-body@kubernetescrd,kube-system-headers-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,
+                                                      kube-system-headers-appid-to-body@kubernetescrd,
+                                                      kube-system-headers-userid-to-body@kubernetescrd,
+                                                      kube-system-common-headers@kubernetescrd
 
 spec:
   tls:
@@ -51,7 +54,9 @@ metadata:
     k8s.kuboard.cn/workload: verification-door-appid
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,kube-system-headers-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,
+                                                      kube-system-headers-appid-to-body@kubernetescrd,
+                                                      kube-system-common-headers@kubernetescrd
 
 spec:
   tls:
