--- a/cmd/verification-door/k8s/03-traefik-ingress.yaml
+++ b/cmd/verification-door/k8s/03-traefik-ingress.yaml
@@ -1,21 +1,21 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: verification-door-appid-userid-ingress
+  name: verification-door-traefik-app-user-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: verification-door-appid-userid
-    k8s.kuboard.cn/workload: verification-door-appid-userid
+    k8s.kuboard.cn/displayName: verification-door-traefik-app-user
+    k8s.kuboard.cn/workload: verification-door-traefik-app-user
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,
+                                                      kube-system-common-headers@kubernetescrd,
                                                       kube-system-headers-appid-to-body@kubernetescrd,
                                                       kube-system-headers-userid-to-body@kubernetescrd,
-                                                      kube-system-common-headers@kubernetescrd
+                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
+                                                      kube-system-app-user-role-rbac-auth@kubernetescrd
 
 spec:
-  tls:
-    - secretName: procyon-vip-tls
   rules:
     - host: api.npool.top
       http: &http_appid_userid_rules
@@ -32,35 +32,30 @@ spec:
             backend:
               serviceName: verification-door
               servicePort: 50090
+    - host: api.procyon.vip
+      http: *http_appid_userid_rules
     - host: api.xpool.top
-      http: *http_appid_userid_rules
-    - host: www.npool.top
-      http: *http_appid_userid_rules
-    - host: www.xpool.top
-      http: *http_appid_userid_rules
-    - host: www.procyon.vip
-      http: *http_appid_userid_rules
-    - host: procyon.vip
       http: *http_appid_userid_rules
 
 ---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: verification-door-appid-ingress
+  name: verification-door-traefik-app-ingress
   namespace: kube-system
   annotations:
-    k8s.kuboard.cn/displayName: verification-door-appid
-    k8s.kuboard.cn/workload: verification-door-appid
+    k8s.kuboard.cn/displayName: verification-door-traefik-app
+    k8s.kuboard.cn/workload: verification-door-traefik-app
     kubernetes.io/ingress.class: "traefik-internet"
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-verification-door-prefix@kubernetescrd,
+                                                      kube-system-common-headers@kubernetescrd,
                                                       kube-system-headers-appid-to-body@kubernetescrd,
-                                                      kube-system-common-headers@kubernetescrd
+                                                      kube-system-headers-userid-to-body@kubernetescrd,
+                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
+                                                      kube-system-app-rbac-auth@kubernetescrd
 
 spec:
-  tls:
-    - secretName: procyon-vip-tls
   rules:
     - host: api.npool.top
       http: &http_appid_rules
@@ -93,25 +88,8 @@ spec:
             backend:
               serviceName: verification-door
               servicePort: 50090
+    - host: api.procyon.vip
+      http: *http_rules
     - host: api.xpool.top
-      http: *http_appid_rules
-    - host: www.npool.top
-      http: *http_appid_rules
-    - host: www.xpool.top
-      http: *http_appid_rules
-    - host: www.procyon.vip
-      http: *http_appid_rules
-    - host: procyon.vip
-      http: *http_appid_rules
+      http: *http_rules
 
----
-
-apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: strip-verification-door-prefix
-  namespace: kube-system
-spec:
-  stripPrefix:
-    prefixes:
-      - /api/verification-door
